[tool.poetry]
name = "DACEspecDL"
version = "0.0.1"
description = "Minimal interface with the DACE api"
authors = ["Kamuish <andremiguel952@gmail.com>"]
packages = [
	{ include = "DACEspecDL" },
]

[tool.poetry.dependencies]
python = "^3.8"
dace-query = "^1.1.0"
loguru = "^0.7.0"
matplotlib = "^3.7.1"


[tool.poetry.dev-dependencies]



[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=60.8.1"]
build-backend = "poetry.core.masonry.api"
